--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,8 +1,9 @@
 {
-    "name": "I Like Dislike",
-    "description": "Shows dislikes counter on YouTube page",
-    "version": "0.0.0.2",
     "manifest_version": 3,
+    "name": "I Like Dislike",
+    "description": "__MSG_description__",
+    "version": "0.0.0.3",
+    "default_locale": "en",
     "background": {
         "service_worker": "background.js"
     },
