Totally rewritten. No API. no third party services any more!

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,32 +1,19 @@
 {
     "manifest_version": 3,
     "name": "I Like Dislike",
-    "description": "__MSG_description__",
-    "version": "0.0.0.3",
-    "default_locale": "en",
-    "background": {
-        "service_worker": "background.js"
-    },
-    "action": {
-        "default_title": "I Like Dislike"
-    },
+    "description": "Shows dislikes counter on YouTube page",
+    "version": "0.0.0.4",
     "icons": {
+        "32": "icons/icon32.png",
         "48": "icons/icon48.png",
-        "64": "icons/icon64.png"
+        "64": "icons/icon64.png",
+        "128": "icons/icon128.png"
     },
     "host_permissions": ["*://*.youtube.com/*"],
-    "options_ui": {
-        "page": "options.html",
-        "open_in_tab": false
-    },
-    "permissions": [
-        "storage"
-    ],
     "content_scripts": [{
         "matches": ["*://*.youtube.com/*"],
         "js": ["content-script.js"],
-        "run_at": "document_start",
-        "css": ["content-style.css"]
+        "run_at": "document_start"
     }],
     "externally_connectable": {
         "matches": ["*://*.youtube.com/*"]
